@@ -1,0 +1,16 @@
+[Desktop Entry]
+Name=Tiger-Nemerle
+Comment=An example of displaying an SVG (written in Nemerle)
+Type=Service
+ServiceTypes=Plasma/Applet
+
+X-KDE-PluginInfo-Author=Arno Rehn
+X-KDE-PluginInfo-Email=arno@arnorehn.de
+X-KDE-PluginInfo-Name=tiger-nemerle
+X-KDE-PluginInfo-Version=pre0.1
+X-KDE-PluginInfo-Website=http://plasma.kde.org/
+X-KDE-PluginInfo-Category=Examples
+X-KDE-PluginInfo-Depends=
+X-KDE-PluginInfo-License=GPL
+X-KDE-PluginInfo-EnabledByDefault=true
+X-Plasma-API=mono-script
